2008-01-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/randomize.c: added previews for hurl,
	pick, and slur.
	
2008-01-02  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* devel-docs/log/20080102-plasma2.txt: explanation of
	this commit.

	* plug-ins/common/plasma2.c: enhanced Plasma plug-in
	by David Necas (Yeti), ported to Gimp coding style
	with deprecated functions updated.

	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am: updated accordingly.

	* plug-ins/common/plasma.c: remove menu entry since
	Plasma2 supersedes it -- leave for pdb though.

	* devel-docs/log/20080102-vblur.txt: fix typo.
	
2008-01-02  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* devel-docs/log/20080102-vblur.txt: explanation of
	this commit.

	* plug-ins/common/variable-blur.c: new "variable blur"
	filter, updated from the one in the registry.

	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am: updated accordingly.
	
2008-01-01  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Fun with filters.  Note that it will be necessary to do 
	"Make uninstall" in plug-ins/common to avoid error messages 
	from the removed plug-ins.

	* devel-docs/log/20080101-filters.txt: explanation of changes
	made in this commit.
	
	* app/actions/plug-in-actions.c
	* menus/image-menu.xml.in: add "Transparency",
	"Transform", "Pointillize", and "Tiling" categories 
	to Filters menu; renamed "Distorts" to "Distort".

	* plug-ins/pagecurl/pagecurl.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/iwarp.c
	* plug-ins/common/lens.c
	* plug-ins/common/ripple.c
	* plug-ins/common/waves.c
	* plug-ins/common/whirlpinch.c: changed "Distorts" to 
	"Distort" in register func.

	* plug-ins/common/displace.c: moved "Displace" to the
	"Distort" category.
	
	* plug-ins/common/blur.c: renamed menu entry from
	"Blur" to "Simple Blur".

	* plug-ins/common/shift.c: changed menu entry to
	"Random Shift", and moved to "Blur" category.

	* plug-ins/common/mail.c